HelloUltraviolet/Source/Fixtures/RejectedSource/Parsing.uv
//! Rejected parsing specimens.

public procedure parsingRejectedSourceFixtureCount() -> usize {
    return 2usize
}

public procedure validatedParsingRejectedSourceFixtureCount() -> usize {
    var count: usize = 0usize
    if rejectedSpecimenMatches(
        rejectedSpecimen(
            "MissingStatementTerminator",
            "Fixtures/RejectedSource/Parsing/MissingStatementTerminator",
            "Fixtures/RejectedSource/Parsing/MissingStatementTerminator/Source/Main.uv",
            "Fixtures/RejectedSource/Parsing/MissingStatementTerminator/Expected.uv",
            expectedDiagnostic("E-SRC-0510", "Missing-Terminator-Err")
        ),
        "MissingStatementTerminator",
        "Fixtures/RejectedSource/Parsing/MissingStatementTerminator",
        "Fixtures/RejectedSource/Parsing/MissingStatementTerminator/Source/Main.uv",
        "Fixtures/RejectedSource/Parsing/MissingStatementTerminator/Expected.uv",
        "E-SRC-0510",
        "Missing-Terminator-Err"
    ) {
        count = count + 1usize
    }
    if rejectedSpecimenMatches(
        rejectedSpecimen(
            "EnumCommaSeparator",
            "Fixtures/RejectedSource/Parsing/EnumCommaSeparator",
            "Fixtures/RejectedSource/Parsing/EnumCommaSeparator/Source/Main.uv",
            "Fixtures/RejectedSource/Parsing/EnumCommaSeparator/Expected.uv",
            expectedDiagnostic("E-SRC-0520", "req.EnumTopLevelCommaSeparatorRejected")
        ),
        "EnumCommaSeparator",
        "Fixtures/RejectedSource/Parsing/EnumCommaSeparator",
        "Fixtures/RejectedSource/Parsing/EnumCommaSeparator/Source/Main.uv",
        "Fixtures/RejectedSource/Parsing/EnumCommaSeparator/Expected.uv",
        "E-SRC-0520",
        "req.EnumTopLevelCommaSeparatorRejected"
    ) {
        count = count + 1usize
    }
    return count
}
